# svif

./: README.md  index.html  newtab.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  ipc.ts  newtab.ts  state.ts  styles.css  themes.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  tab-pages.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  reporter.js  settings.rs  tabs.rs
src/components/: FindBar.tsx  MenuPopover.tsx  SettingsPanel.tsx  TabStrip.tsx  Toolbar.tsx  WindowButtons.tsx  icons.tsx
